--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-electron-app",
   "version": "1.0.0",
   "description": "Hello, World!",
-  "main": "main.js",
+  "main": "src/main.js",
   "scripts": {
     "start": "electron ."
   },
@@ -10,5 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "electron": "^22.1.0"
+  },
+  "dependencies": {
+    "electron-window-state": "^5.0.3"
   }
 }
